Fix overflow in event settings
Otherwise the room selector looks weird.

--- a/indico/htdocs/sass/modules/_event_management.scss
+++ b/indico/htdocs/sass/modules/_event_management.scss
@@ -639,6 +639,7 @@ th.i-table {
         margin-right: -10px;
         padding-left: 10px;
         padding-right: 10px;
+        overflow: visible;
 
         & > .icon {
             color: $dark-gray !important;
